--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+  </head>
   <body>
   	<div style="border: 1px solid red;">
     	<div id="app"></div>
